Make all error types pure data, remove extends Exception
Error types in eru-http are now plain case classes with `def message: String`
instead of extending Exception. This aligns with the Eru core pattern where
errors are pure data values, never exceptions.

- Remove `extends Exception` from all 21 leaf error types across shared/jvm/js
- Add `def message: String` to types that derived it from Exception constructor
- Update HttpError.message to use `.message` instead of `.getMessage`
- Update HttpError.toException, H2Error.toException, WebSocketError.toException
  to construct `new Exception(...)` from the pure data
- Restructure Cookie.parseCookie to use Eru.foreach instead of throw
- Restructure Uri.parse to use phased Eru.effect + flatMap instead of throw
- Restructure H2ServerConnection.readFrameBytes into phased effects, remove
  FrameSizeException private class
- Update all callers (.getMessage -> .message) in Middleware, Interceptor
- Add server-side concurrent stream limit test (RFC 9113 Section 5.1.2)
- Remove -XX:+ZGenerational from .sbtopts, build.sbt, BENCHMARKING.md
  (default since JDK 23, warning on JDK 25)
- Clean up stale planning/progress docs